--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
+    "react-point": "^2.1.1",
     "react-router": "^3.0.1"
   }
 }
