--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "serve:dist": "node server.js --env=dist",
     "dist": "npm run copy & webpack --env=dist",
     "lint": "eslint ./src",
-    "copy": "copyfiles -f ./src/index.html ./src/favicon.ico ./dist",
+    "copy": "copyfiles -f ./src/index.html ./dist",
     "clean": "rimraf dist/*",
     "release:major": "npm version major && npm publish && git push --follow-tags",
     "release:minor": "npm version minor && npm publish && git push --follow-tags",
@@ -58,7 +58,9 @@
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
+    "react-motion": "^0.4.7",
     "react-point": "^2.1.1",
-    "react-router": "^3.0.1"
+    "react-router": "^3.0.1",
+    "redux": "^3.6.0"
   }
 }
