--- a/package.json
+++ b/package.json
@@ -54,12 +54,14 @@
     "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "core-js": "^2.0.0",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-motion": "^0.4.7",
     "react-point": "^2.1.1",
+    "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
     "redux": "^3.6.0"
   }
