--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-eslint": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-polyfill": "^6.3.14",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.5.0",
@@ -51,7 +52,8 @@
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.0",
-    "webpack-dev-server": "^1.12.0"
+    "webpack-dev-server": "^1.12.0",
+    "mobx-react-devtools": "^4.2.10"
   },
   "dependencies": {
     "classnames": "^2.2.5",
@@ -63,6 +65,8 @@
     "react-point": "^2.1.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "mobx": "^2.6.3",
+    "mobx-react": "^4.0.3"
   }
 }
